--- a/source/photo.html
+++ b/source/photo.html
@@ -25,13 +25,13 @@
     <main class="page__photo page-photo">
       <h1 class="visually-hidden">Седона</h1>
       <div class="page-photo__promo photo-promo">
-        <img class="photo-promo__img" src="source/img/sedona.png" width="0" height="0" alt="Welcome to Sedona">
-        <h2 class="photo-promo__content">Фото и Видео</h2>
-        <p class="photo-promo__text">Не можете решиться на путешествие из-за курса? Фотографии помогут вам забыть о политике и экономике.</p>
+        <img class="photo-promo__img" src="img/text-sedona.svg" width="233" height="40" alt="Welcome to Sedona">
       </div>
+      <h2 class="photo-promo__content">Фото и Видео</h2>
+      <p class="photo-promo__text">Не можете решиться на путешествие из-за курса? Фотографии помогут вам забыть о политике и экономике.</p>
       <section class="page-photo__gallery gallery">
         <figure class="gallery__photo photo">
-            <a class="photo__link"><img class="photo__img" src="source/img/sedona.png" width="0" height="0" alt="Неродные просторы"></a>
+            <a class="photo__link"><img class="photo__img" src="img/photo-sunset-mobile@1x.jpg" width="280" height="280" alt="Неродные просторы"></a>
             <figcaption class="photo__inscription">
               <p class="photo__name">Неродные просторы</p>
               <span class="photo__author">Автор фото: Борис</span>
@@ -39,7 +39,7 @@
             </figcaption>
         </figure>
         <figure class="gallery__photo photo">
-          <a class="photo__link"><img class="photo__img" src="source/img/sedona.png" width="0" height="0" alt="Местная растительность"></a>
+          <a class="photo__link"><img class="photo__img" src="img/photo-cactus-mobile@1x.jpg" width="280" height="280" alt="Местная растительность"></a>
             <figcaption class="photo__inscription">
                 <p class="photo__name">Местная растительность</p>
                 <span class="photo__author">Автор фото: Сергей</span>
@@ -47,7 +47,7 @@
             </figcaption>
         </figure>
         <figure class="gallery__photo photo">
-          <a class="photo__link"><img class="photo__img" src="source/img/sedona.png" width="0" height="0" alt="Дорога на север"></a>
+          <a class="photo__link"><img class="photo__img" src="img/photo-roads-mobile@1x.jpg" width="280" height="280" alt="Дорога на север"></a>
             <figcaption class="photo_inscription">
                 <p class="photo__name">Дорога на север</p>
                 <span class="photo__author">Автор фото: Пётр</span>
@@ -55,20 +55,25 @@
             </figcaption>
         </figure>
         <figure class="gallery__photo photo">
-          <a class="photo__link"><img class="photo__img" src="source/img/sedona.png" width="0" height="0" alt="Мост Дьявола"></a>
+          <a class="photo__link"><img class="photo__img" src="img/photo-bridge-mobile@1x.jpg" width="280" height="280" alt="Мост Дьявола"></a>
             <figcaption class="photo_inscription">
               <p class="photo__name">Мост Дьявола</p>
               <span class="photo__author">Автор фото: Антон</span>
               <div class="photo__likes">254</div>
             </figcaption>
         </figure>
-      </section class="page-photo__video-gallery video-gallery">
+      </section>
+      <section class="page-photo__video-gallery video-gallery">
         <h3 class="video-gallery__title">Все еще сомневаетесь?</h3>
         <p class="video-gallery__text">Смотрите видеопрезентацию и скорее за билетами,
           пока они не подорожали в очередной раз!</p>
         <div class="video-gallery__clip"></div>
-      <section>
-
+        <div class="player-controls">
+          <div class="player-controls__bar"></div>
+          <div class="player-controls__button"></div>
+          <div class="player-controls__cc"></div>
+          <div class="player-controls__fullscreen"></div>
+        </div>
       </section>
     </main>
     <footer class="page__footer page-footer">
