--- a/source/index.html
+++ b/source/index.html
@@ -9,7 +9,7 @@
     <header class="page__header page-header">
       <nav class="page-header__nav page-header-nav">
         <a class="page-header__logo logo">
-          <img class="logo__image" src="img/logo-sedona-mobile.svg" width="102" height="83" alt="Логотип Седона">
+          <div class="logo__image"></div>
         </a>
         <!--<button class="page-header__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>-->
         <ul class="page-header-nav__list site-list site-list--left">
@@ -24,53 +24,70 @@
     </header>
     <main class="page__main page-main">
       <h1 class="visually-hidden">Седона</h1>
-      <div class="page-main__promo promo">
-        <img class="promo__img" src="img/text-sedona-index.svg" width="280" height="210" alt="Welcome to Sedona">
-      </div>
-      <h2 class="promo__content text--weight-bold text--size--medium text--line-height--26px">Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
-      <section class="page-main__reasons reasons">
-        <h2 class="reasons__title text--weight-normal text--size--small text--line-height--26px"> Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</h2>
-          <ul class="reasons__list">
-            <li class="reasons__item reasons__item--reason-first">
-              <h3 class="reasons__item__title text--weight-normal text--size--large text--line-height--10px">Настоящий городок</h3>
-              <div class="reasons__item__num text--weight-normal text--size--small text--line-height--15px">№1</div>
-              <p class="reasons__item__text text--weight-normal text--size--small text--line-height--21px">Седона не аттракцион для туристов, там течет своя жизнь</p>
-              <img class="reasons-item__image" src="img/main-city-mobile@1x.jpg" width="320" height="300" alt="фото Седоны">
+      <header class="page-main__header page-main-header">
+        <div class="page-main__promo promo">
+          <div class="promo__img"></div>
+        </div>
+          <h2 class="page-main-header__title text--weight-bold text--size--medium text--line-height--26px">Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
+          <p class="page-main-header__text text--weight-normal text--size--small text--line-height--26px"> Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
+      </header>
+      <section class="page-main__content page-main-content">
+        <h2 class="visually-hidden">Причины для посещения</h2>
+        <section class="page-main-content__reason reason reason--reason-first">
+          <div class="reason__content reason__content--background-blue">
+            <h3 class="reason__title reason__item__title  reason__title--triangle text--weight-normal text--size--large text--line-height--10px">Настоящий городок</h3>
+            <span class="reason__num text--weight-normal text--size--small text--line-height--15px">№1</span>
+            <p class="reason__text text--weight-normal text--size--small text--line-height--21px">Седона не аттракцион для туристов, там течет своя жизнь</p>
+          </div>
+          <div class="reason__image reason__image--image-reason-first"></div>
+        </section>
+        <section class="features">
+          <div class="features__item">
+            <h3 class="feature__title text--weight-bold text--size--medium text--line-height--26px">Жилье</h3>
+            <p class="feature__text text--weight-normal text--size--small text--line-height--21px">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+          </div>
+          <div class="features__item">
+            <h3 class="feature__title text--weight-bold text--size--medium text--line-height--26px">Еда</h3>
+            <p class="feature__text text--weight-normal text--size--small text--line-height--21px">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+          </div>
+          <div class="features__item">
+            <h3 class="feature__title text--weight-bold text--size--medium text--line-height--26px">Сувениры</h3>
+            <p class="feature__text text--weight-normal text--size--small text--line-height--21px">Не только китайского, но и местного производства!</p>
+          </div>
+        </section>
+        <section class="page-main-content__reason reason reason--reason-second">
+          <div class="reason__content reason__content--background-blue">
+            <h3 class="reason__title text--weight-normal text--size--large text--line-height--10px">Там есть Мост Дьявола</h3>
+            <div class="reason__num text--weight-normal text--size--small text--line-height--15px">№2</div>
+            <p class="reason__text text--weight-normal text--size--small text--line-height--21px">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
+          </div>
+          <div class="reason__image reason__image--image-reason-second"></div>
+        </section>
+        <section class="page-main-content__reasons-without-photo reasons-without-photo">
+          <ul class="reasons-without-photo__list reasons-list">
+            <li class="reasons-list__item reason reason--reason-third">
+              <div class="reason__content reason__content--without-photo">
+                <h3 class="reason__title text--weight-normal text--size--large text--line-height--10px">Небольшая площадь</h3>
+                <span class="reason__num text--weight-normal text--size--small text--line-height--15px">№3</span>
+                <p class="reason__text text--weight-normal text--size--small text--line-height--21px">Все интересные места находятся очень близко</p>
+              </div>
             </li>
-            <li class="reasons__item feature">
-              <h3 class="feature__item__title text--weight-bold text--size--medium text--line-height--26px">Жилье</h3>
-              <p class="feature__item__text text--weight-normal text--size--small text--line-height--21px">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+            <li class="reasons-list__item reason reason--reason-fourth">
+              <div class="reason__content reason__content--without-photo">
+                <h3 class="reason__title text--weight-normal text--size--large text--line-height--10px">Красивая дорога</h3>
+                <span class="reason__num text--weight-normal text--size--small text--line-height--15px">№4</span>
+                <p class="reason__text text--weight-normal text--size--small text--line-height--21px">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+              </div>
             </li>
-            <li class="reasons__item feature">
-              <h3 class="feature__item__title text--weight-bold text--size--medium text--line-height--26px">Еда</h3>
-              <p class="feature__item__text text--weight-normal text--size--small text--line-height--21px">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
-            </li>
-            <li class="reasons__item feature">
-              <h3 class="feature__item__title text--weight-bold text--size--medium text--line-height--26px">Сувениры</h3>
-              <p class="feature__item__text text--weight-normal text--size--small text--line-height--21px">Не только китайского, но и местного производства!</p>
-            </li>
-            <li class="reasons__item reasons__item--reason-second">
-              <h3 class="reasons__item__title text--weight-normal text--size--large text--line-height--10px">Там есть Мост Дьявола</h3>
-              <div class="reasons__item__num text--weight-normal text--size--small text--line-height--15px">№2</div>
-              <p class="reasons__item__text text--weight-normal text--size--small text--line-height--21px">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
-              <img class="reasons-item__image" src="img/photo-bridge-mobile@1x.jpg" width="320" height="300" alt="фото мост дьявола">
-            </li>
-            <li class="reasons__item reasons__item--reason-third">
-              <h3 class="reasons__item__title text--weight-normal text--size--large text--line-height--10px">Небольшая площадь</h3>
-              <div class="reasons__item__num text--weight-normal text--size--small text--line-height--15px">№3</div>
-              <p class="reasons__item__text text--weight-normal text--size--small text--line-height--21px">Все достопримечательности находятся очень близко</p>
-            </li>
-            <li class="reasons__item reasons__item--reason-fourth">
-              <h3 class="reasons__item__title text--weight-normal text--size--large text--line-height--10px">Красивая дорога</h3>
-              <div class="reasons__item__num text--weight-normal text--size--small text--line-height--15px">№4</div>
-              <p class="reasons__item__text text--weight-normal text--size--small text--line-height--21px">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
-            </li>
-            <li class="reasons__item reasons__item--reason-fifth">
-              <h3 class="reasons__item__title text--weight-normal text--size--large text--line-height--10px">Мало туристов</h3>
-              <div class="reasons__item__num text--weight-normal text--size--small text--line-height--15px">№5</div>
-              <p class="reasons__item__text text--weight-normal text--size--small text--line-height--21px">Большинство едет в Гранд Каньон и толпится там</p>
+            <li class="reasons__item reason reason--reason-fifth">
+              <div class="reason__content reason__content--without-photo">
+                <h3 class="reason__title text--weight-normal text--size--large text--line-height--10px">Мало туристов</h3>
+                <span class="reason__num text--weight-normal text--size--small text--line-height--15px">№5</span>
+                <p class="reason__text text--weight-normal text--size--small text--line-height--21px">Большинство едет в Гранд Каньон и толпится там</p>
+              </div>
             </li>
           </ul>
+        </section>
       </section>
       <section class="page-main__hotels-searching hotels-searching">
         <h3 class="hotels-searching__title text--weight-bold text--size--medium text--line-height--26px">Заинтересовались?</h3>
@@ -78,7 +95,6 @@
           и мы покажем вам лучшие предложения гостиниц в Седоне</p>
         <a class="button text--weight-bold text--size--large text--line-height--26px" href="hotels.html">Найти гостиницу</a>
         <div class="map">
-            <img class="map__sedona" src="img/bg-map-mobile@1x.jpg" width="320" height="350" alt="Седона на карте">
         </div>
       </section>
     </main>
