--- a/source/form.html
+++ b/source/form.html
@@ -11,7 +11,7 @@
   <header class="page__header page-header">
     <nav class="page-header__nav page-header-nav">
       <a class="page-header__logo logo">
-        <img class="logo__image" src="img/logo-sedona-mobile.svg" width="102" height="83" alt="Логотип Седона">
+        <div class="logo__image"></div>
       </a>
       <!--<button class="page-header__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>-->
       <ul class="page-header-nav__list site-list site-list--left">
@@ -26,18 +26,19 @@
   </header>
   <main class="page__form page-form">
     <h1 class="visually-hidden">Седона</h1>
-    <div class="page-form__promo form-promo">
-      <img class="form-promo__img" src="img/text-sedona.svg" width="233" height="40" alt="Welcome to Sedona">
-    </div>
-    <h2 class="form-promo__content text--weight-bold text--size--medium text--line-height--26px">Оставьте свой отзыв</h2>
-    <p class="form-promo__text text--weight-normal text--size--small text--line-height--24px">Помогите нашим отелям стать лучше! Оставьте отзыв о них, а так же о посещенных вами
-        достопримечательностях</p>
+      <header class="page-main__header page-main-header">
+        <div class="page-form__promo form-promo">
+          <div class="form-promo__img"></div>
+        </div>
+        <h2 class="form-promo__content text--weight-bold text--size--medium text--line-height--26px">Оставьте свой отзыв</h2>
+        <p class="form-promo__text text--weight-normal text--size--small text--line-height--24px">Помогите нашим отелям стать лучше! Оставьте отзыв о них, а так же о посещенных вами достопримечательностях</p>
+      </header>
     <form class="page-form__form form" action="https://echo.htmlacademy.ru" method="post">
       <fieldset class="form__personal-datas personal-datas">
         <legend class="personal-datas__title text--weight-bold text--size--medium text--line-height--26px">Представьтесь:</legend>
         <p>
           <label class="personal-datas__label text--weight-normal text--size--small text--line-height--26px" for="firstname">имя:</label>
-          <input class="personal-datas__input text--weight-bold text--size--medium text--line-height--26px" type="text" name="firstname" id="firstname" placeholder="Петр"> </p>
+          <input class="personal-datas__input personal-datas__input--firstname text--weight-bold text--size--medium text--line-height--26px" type="text" name="firstname" id="firstname" placeholder="Петр"> </p>
         <p>
           <label class="personal-datas__label text--weight-normal text--size--small text--line-height--26px" for="lastname">фамилия:</label>
           <input class="personal-datas__input text--weight-bold text--size--medium text--line-height--26px" type="text" name="lastname" id="lastname" placeholder="Иванов"> </p>
@@ -70,18 +71,20 @@
       </fieldset>
       <fieldset class="form__landmarks landmarks">
         <legend class="landmarks__title text--weight-bold text--size--medium text--line-height--26px">Посещенные достопримечательности</legend>
-        <p>
-          <input class="landmarks__choice" type=checkbox name="devilsbridge" id="devilsbridge" checked>
-          <label class="text--weight-bold text--size--medium text--line-height--26px" for="devilsbridge" tabindex="0">Мост Дьявола</label></p>
-        <p>
-          <input class="landmarks__choice" type=checkbox name="mountainbell" id="mountainbell" checked>
-          <label class="text--weight-bold text--size--medium text--line-height--26px" for="mountainbell" tabindex="0">Гора-Колокол</label></p>
-        <p>
-          <input class="landmarks__choice" type=checkbox name="slidepark" id="slidepark" checked>
-          <label class="text--weight-bold text--size--medium text--line-height--26px" for="slidepark" tabindex="0">Слайд-парк</label></p>
-        <p>
-          <input class="landmarks__choice" type=checkbox name="redrocks" id="redrocks">
-          <label class="text--weight-bold text--size--medium text--line-height--26px" for="redrocks" tabindex="0">Красные скалы</label></p>
+        <div class="landmarks__checkboxes">
+          <p>
+            <input class="landmarks__choice" type=checkbox name="devilsbridge" id="devilsbridge" checked>
+            <label class="text--weight-bold text--size--medium text--line-height--26px" for="devilsbridge" tabindex="0">Мост Дьявола</label></p>
+          <p>
+            <input class="landmarks__choice" type=checkbox name="mountainbell" id="mountainbell" checked>
+            <label class="text--weight-bold text--size--medium text--line-height--26px" for="mountainbell" tabindex="0">Гора-Колокол</label></p>
+          <p>
+            <input class="landmarks__choice" type=checkbox name="slidepark" id="slidepark" checked>
+            <label class="text--weight-bold text--size--medium text--line-height--26px" for="slidepark" tabindex="0">Слайд-парк</label></p>
+          <p>
+            <input class="landmarks__choice" type=checkbox name="redrocks" id="redrocks">
+            <label class="text--weight-bold text--size--medium text--line-height--26px" for="redrocks" tabindex="0">Красные скалы</label></p>
+        </div>
       </fieldset>
       <fieldset class="form__comment comment">
         <legend class="comment__title text--weight-bold text--size--medium text--line-height--26px">Опишите свои эмоции</legend>
@@ -90,7 +93,8 @@
           <textarea class="comment__text text--weight-bold text--size--medium text--line-height--26px" name="comment" id="comment" placeholder="Опишите подробно все свои восторги"></textarea>
       </fieldset>
       <label for="send"></label>
-      <input class="button text--weight-bold text--size--large text--line-height--26px" name="send" id="send" type="submit" value="Отправить отзыв">
+      <input class="form__button button text--weight-bold text--size--large text--line-height--26px" name="send" id="send" type="submit" value="Отправить отзыв">
+      <span class="form__asterisk">* — обязательные поля</span>
     </form>
   </main>
   <footer class="page__footer page-footer">
